# CMakeList.txt : CMake project for DataStructure, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (DataStructure "DataStructure.cpp" "DataStructure.h")

# TODO: Add tests and install targets if needed.
